Changed the layout of onboarding Screens

--- a/Auto_aid/app/src/main/res/values/themes.xml
+++ b/Auto_aid/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/md_blue_500</item>
         <item name="colorSecondary">@color/md_white_1000</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:fitsSystemWindows">true</item>
+
     </style>
 </resources>
 
